syntax = "proto3";

message Mahasiswa {
  string id = 1;
  string nama = 2;
  string nrp = 3;
  int64 nilai = 4;
}

message Contacts {
  string nama = 1;
  string no_telp = 2;
  string email = 3;
}

message Contact_id {
  string id = 1;
}

message Mahasiswa_id {
  string id = 1;
}

message Empty {}

message MahasiswaList {
  repeated Mahasiswa mahasiswa = 1;
}

service MahasiswaService {
  rpc getAll (Empty) returns (MahasiswaList) {}
  rpc AddMahasiswa (Mahasiswa) returns (Mahasiswa) {}
  rpc deleteMahasiswa (Mahasiswa_id) returns (Empty) {};
  rpc updateMahasiswa (Mahasiswa_id) returns (Mahasiswa) {};
  rpc getMahasiswa (Mahasiswa_id) returns (Mahasiswa) {};
  rpc createDatabase (Empty) returns (Empty) {};
  rpc deleteDatabase (Empty) returns (Empty) {};
}